[gd_scene load_steps=28 format=2]

[ext_resource path="res://Player/playerKinematic.gd" type="Script" id=1]
[ext_resource path="res://Player/SFX.gd" type="Script" id=2]
[ext_resource path="res://Sounds/SFX/SFX_Player_JumpOff.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/SFX/SFX_Player_SwitchColorToOrange.wav" type="AudioStream" id=4]
[ext_resource path="res://Sounds/SFX/SFX_Player_SwitchColorToPurple.wav" type="AudioStream" id=5]
[ext_resource path="res://Sounds/SFX/SFX_Player_MoveOnFloor.wav" type="AudioStream" id=6]
[ext_resource path="res://Player/SwitcheffectExplosion.tscn" type="PackedScene" id=7]
[ext_resource path="res://Player/Particles/playerKinematic2.tres" type="Material" id=8]
[ext_resource path="res://Enviroment/Datastrings/DatastringImages/32x32WhiteDot.png" type="Texture" id=9]
[ext_resource path="res://Player/Particles/playerKinematic1.tres" type="Material" id=10]
[ext_resource path="res://Player/charakter_pink_sprite.png" type="Texture" id=11]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 14.4681
height = 83.2394

[sub_resource type="Animation" id=2]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:WALK_FORCE")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:GRAVITY")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[sub_resource type="Animation" id=3]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=4]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=5]

resource_name = "FinishLinePassedCharFreeze"
length = 2.0
loop = false
step = 0.1

[sub_resource type="Animation" id=6]

resource_name = "GameStartTimerOver"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:WALK_FORCE")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 1500 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:GRAVITY")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 3000.0 ]
}

[sub_resource type="Animation" id=7]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=8]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=9]

length = 0.8
loop = false
step = 0.1

[sub_resource type="Animation" id=10]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Animation" id=11]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:collision_layer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 30 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 6 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VFX/Particles2DPurpleZero:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VFX/Particles2DOrangeOne:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("VFX/SwitcheffectExplosion")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "FireParticles"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("VFX/SwitcheffectExplosion")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "OrangeToPurple"
} ]
}

[sub_resource type="Animation" id=12]

length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:collision_layer")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 29 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:collision_mask")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 5 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("VFX/Particles2DOrangeOne:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("VFX/Particles2DPurpleZero:emitting")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "method"
tracks/4/path = NodePath("VFX/SwitcheffectExplosion")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "FireParticles"
} ]
}
tracks/5/type = "method"
tracks/5/path = NodePath("VFX/SwitcheffectExplosion")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "PurpleToOrange"
} ]
}

[sub_resource type="Animation" id=13]

length = 1.0
loop = false
step = 0.1

[sub_resource type="Curve" id=14]

min_value = 0.0
max_value = 1.0
bake_resolution = 100
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 0.942558, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 0 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=15]

flags = 4
width = 2048
curve = SubResource( 14 )

[sub_resource type="ParticlesMaterial" id=16]

render_priority = 0
trail_divisor = 1
emission_shape = 0
flag_align_y = false
flag_rotate_y = false
flag_disable_z = true
spread = 0.0
flatness = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 1.0
initial_velocity_random = 0.0
angular_velocity = 0.0
angular_velocity_random = 0.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
linear_accel = 0.0
linear_accel_random = 0.0
radial_accel = 0.0
radial_accel_random = 0.0
tangential_accel = 0.0
tangential_accel_random = 0.0
damping = 0.0
damping_random = 0.0
angle = 0.0
angle_random = 0.0
scale = 0.4
scale_random = 0.0
scale_curve = SubResource( 15 )
color = Color( 1, 1, 1, 0.392157 )
hue_variation = 0.0
hue_variation_random = 0.0
anim_speed = 0.0
anim_speed_random = 0.0
anim_offset = 0.0
anim_offset_random = 0.0
anim_loop = false
_sections_unfolded = [ "Color", "Gravity", "Scale", "Spread", "Trail" ]

[node name="player" type="KinematicBody2D" index="0"]

position = Vector2( -1.66478, 7.61046 )
scale = Vector2( 0.8, 0.8 )
input_pickable = false
collision_layer = 30
collision_mask = 6
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Collision", "Transform", "collision" ]
GRAVITY = 3000.0
WALK_FORCE = 1500
WALK_MIN_SPEED = 300
WALK_MAX_SPEED = 1000
FULLSPEED_MAX_SPEED = 1500
STOP_FORCE = 1300
JUMP_SPEED = 1200
JUMP_MAX_AIRBORNE_TIME = 0.001
FULSPEED_LEEWAY = 100
FULLSPEED_FORCE = 100
onAirTime = 0
IS_ORANGE = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

editor/display_folded = true
position = Vector2( -3.19009, -4.38425 )
shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="1"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/CharacterGameStartAnimation = SubResource( 2 )
anims/CharacterLevelEndAnimation = SubResource( 3 )
anims/DatastringCrossAnimation = SubResource( 4 )
anims/FinishLinePassedCharFreeze = SubResource( 5 )
anims/GameStartTimerOver = SubResource( 6 )
anims/IdleAnimation = SubResource( 7 )
anims/JumpTakeoffAnimation = SubResource( 8 )
anims/LeanLeft = SubResource( 9 )
anims/LeanRight = SubResource( 10 )
anims/SwitchOrangeToPurple = SubResource( 11 )
anims/SwitchPurpleToOrange = SubResource( 12 )
blend_times = [  ]

[node name="SFX" type="Node2D" parent="." index="2"]

editor/display_folded = true
script = ExtResource( 2 )

[node name="JumpOff" type="AudioStreamPlayer" parent="SFX" index="0"]

stream = ExtResource( 3 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "SFX"

[node name="SwitchColorToOrange" type="AudioStreamPlayer" parent="SFX" index="1"]

stream = ExtResource( 4 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "SFX"

[node name="SwitchColorToPurple" type="AudioStreamPlayer" parent="SFX" index="2"]

stream = ExtResource( 5 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "SFX"

[node name="AudioStreamPlayer3" type="AudioStreamPlayer" parent="SFX" index="3"]

stream = ExtResource( 6 )
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "SFX"

[node name="AudioStreamPlayer4" type="AudioStreamPlayer" parent="SFX" index="4"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="AudioStreamPlayer5" type="AudioStreamPlayer" parent="SFX" index="5"]

stream = null
volume_db = 0.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="VFX" type="Node2D" parent="." index="3"]

editor/display_folded = true

[node name="VFX" type="AnimationPlayer" parent="VFX" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/JumpAnimation = SubResource( 13 )
blend_times = [  ]

[node name="SwitcheffectExplosion" parent="VFX" index="1" instance=ExtResource( 7 )]

show_behind_parent = true
position = Vector2( 3.04739, 1.2499 )
scale = Vector2( 1, 1 )

[node name="Particles2DOrangeOne" type="Particles2D" parent="VFX" index="2"]

pause_mode = 2
show_behind_parent = true
position = Vector2( 3.33757, -8.7665 )
rotation = -1.5708
scale = Vector2( 1, 1 )
emitting = false
amount = 200
lifetime = 15.0
one_shot = false
preprocess = 0.0
speed_scale = 10.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = ExtResource( 8 )
texture = ExtResource( 9 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Pause", "Process Material", "Textures", "Time", "Transform", "Visibility" ]

[node name="Particles2DPurpleZero" type="Particles2D" parent="VFX" index="3"]

pause_mode = 2
show_behind_parent = true
position = Vector2( 3.33757, -8.7665 )
rotation = -1.5708
scale = Vector2( 1, 1 )
emitting = true
amount = 200
lifetime = 15.0
one_shot = false
preprocess = 0.0
speed_scale = 10.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 0
process_material = ExtResource( 10 )
texture = ExtResource( 9 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Pause", "Process Material", "Textures", "Time", "Transform", "Visibility" ]

[node name="ParticlesIfBoosted" type="Particles2D" parent="VFX" index="4"]

self_modulate = Color( 0, 0.1875, 0.13916, 0.745882 )
show_behind_parent = true
position = Vector2( 3.82557, -1.63696 )
rotation = 0.377236
scale = Vector2( 0.126828, 0.126828 )
emitting = true
amount = 30
lifetime = 2.0
one_shot = false
preprocess = 0.0
speed_scale = 3.0
explosiveness = 0.0
randomness = 0.0
fixed_fps = 0
fract_delta = true
visibility_rect = Rect2( -100, -100, 200, 200 )
local_coords = false
draw_order = 1
process_material = SubResource( 16 )
texture = ExtResource( 11 )
normal_map = null
h_frames = 1
v_frames = 1
_sections_unfolded = [ "Drawing", "Material", "Process Material", "Textures", "Time", "Transform", "Visibility" ]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]


